Fixed height pane 2 rows: hover overflow debug

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -146,6 +146,7 @@ table#reportData tr.rowa td {
 	overflow:visible;
 	color: white;
   text-shadow: 0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black,0px 0px 1em black;
+  z-index: 999;
 }
 
 table#reportData tr.rowb  { 
